[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/sheep.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sheep_particles.png" type="Texture" id=3]
[ext_resource path="res://src/Player/Particules.tres" type="Material" id=4]
[ext_resource path="res://src/Bullet/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/multi_shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/dash.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/load_bullet.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/death.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/low_energy.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/accelerate.wav" type="AudioStream" id=12]
[ext_resource path="res://sound/high_score.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/decelerate.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/loot.wav" type="AudioStream" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 26.1758
height = 14.3136

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 180.0
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale_random = 1.0

[sub_resource type="Animation" id=3]
resource_name = "Dash"
length = 0.28
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:speed")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.035, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1000, 1000 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.25, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BoostParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathParticles:speed_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 6
script = ExtResource( 2 )
Bullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.08713, 1.83936 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
z_index = 1
shape = SubResource( 1 )

[node name="BoostParticles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.517647 )
position = Vector2( -39.7797, 0.87529 )
amount = 25
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="DeathParticles" type="Particles2D" parent="."]
z_index = 1
amount = 100
lifetime = 0.15
preprocess = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Dash = SubResource( 3 )
anims/Death = SubResource( 4 )
anims/Spawn = SubResource( 5 )

[node name="NewBulletTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="MultiShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="LoadBulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="LowEnergySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="AccelerateSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="DecelerateSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -15.0

[node name="HighScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0

[node name="LootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.0

[connection signal="low_energy" from="." to="." method="_on_Player_low_energy"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="NewBulletTimer" to="." method="add_bullet"]
